landing page of salmanhaider.me ported to isalmanhaider.github.io

--- a/index.html
+++ b/index.html
@@ -1,10 +1,38 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>Salman Haider | Full Stack Drupal Developer and Data Scientist</title>
-    </head>
-    <body>
+<!DOCTYPE HTML>
+<html>
+<head>
+	<title>Salman Haider - Drupal Developer</title>
+	<meta charset="utf-8" /><meta name="viewport" content="width=device-width, initial-scale=1" />
+	<link href="assets/css/main.css" rel="stylesheet" />
+</head>
+<body class="loading">
+<div id="wrapper">
+<div id="bg"></div>
 
-    </body>
+<div id="main"><!-- Header -->
+<header id="header">
+<h1>Salman Haider</h1>
+
+<p>Full Stack Web Developer &nbsp;&bull;&nbsp; Designer &nbsp;&bull;&nbsp; Drupal Evangelist</p>
+
+<nav>
+<ul>
+	<li><a class="icon fa-facebook" href="https://www.facebook.com/isalmanhaider" target="_blank"><span class="label">Facebook</span></a></li>
+	<li><a class="icon fa-twitter" href="https://twitter.com/isalmanhaider" target="_blank"><span class="label">Twitter</span></a></li>
+	<li><a class="icon fa-linkedin" href="https://www.linkedin.com/in/salman-haider-28bb4b170/" target="_blank"><span class="label">Linkedin</span></a></li>
+	<li><a class="icon fa-drupal" href="https://www.drupal.org/u/isalmanhaider" target="_blank"><span class="label">Twitter</span></a></li>
+	<li><a class="icon fa-github" href="https://github.com/isalmanhaider" target="_blank"><span class="label">Github</span></a></li>
+	<li><a class="icon fa-envelope-o" href="mailto:isalmanhaider@gmail.com" target="_blank"><span class="label">Email</span></a></li>
+</ul>
+</nav>
+
+<p>Need work done ? Drop me a message at <a href="http://www.fiverr.com/salman_haider" target="_blank">Send Message</a></p>
+</header>
+</div>
+</div>
+<script>
+            window.onload = function() { document.body.className = ''; }
+            window.ontouchmove = function() { return false; }
+            window.onorientationchange = function() { document.body.scrollTop = 0; }
+        </script></body>
 </html>
