--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-	<title>Salman Haider - Drupal Developer</title>
+	<title>Salman Haider - Full Stack Drupal Developer and Data Scientist</title>
 	<meta charset="utf-8" /><meta name="viewport" content="width=device-width, initial-scale=1" />
 	<link href="assets/css/main.css" rel="stylesheet" />
 </head>
